# UniRel

./: .gitignore  .gitmodules  README.md  getdata.sh  pyproject.toml  run.py  run_nyt.sh  run_webnlg.sh  utils.py
dataprocess/: data_extractor.py  data_metric.py  data_processor.py
model/: model_transformers.py  modify_bert.py
